<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/taxi" />

    <TextView
        android:id="@+id/linearTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/ltitle"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/linearLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:text="@string/location" />

    <TextView
        android:id="@+id/linearDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:text="@string/distance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="20dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/next"
            android:layout_marginEnd="20dp" />
    </LinearLayout>
</LinearLayout>
