<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/relativeImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/taxi" />

    <TextView
        android:id="@+id/relativeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/rtitle"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/relativeLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/relativeDistance"
        android:layout_marginBottom="133dp"
        android:text="@string/location"
        android:layout_alignLeft="@+id/relativeDistance" />

    <TextView
        android:id="@+id/relativeDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="98dp"
        android:layout_marginStart="12dp"
        android:text="@string/distance"
        android:layout_marginLeft="12dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:layout_marginStart="23dp"
        android:text="@string/back"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button7"
        android:layout_marginEnd="23dp"
        android:text="@string/next"
        android:layout_alignParentRight="true"
        android:layout_marginRight="23dp" />

</RelativeLayout>
